<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/main_list"
        android:textStyle="bold"
        android:background="@drawable/header_border_black"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#fff"
        android:shadowColor="@color/black"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/header_round_black"
                android:textColor="@color/white"
                android:text="@string/head_6"
                android:padding="10dp"
                android:gravity="center"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_1"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_2"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_3"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_4"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_5"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_6"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_7"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_8"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_9"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_6_topic_10"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                android:background="@drawable/header_round_black"
                android:text="@string/head_7"
                android:gravity="center"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_1"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_2"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_3"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_4"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_5"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_7_topic_6"
                android:textColor="@color/white"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>