<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/home"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@drawable/header_border_black">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="9.5"
            android:layout_height="match_parent"
            android:text="@string/head_8"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"/>
        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_info_step"
            android:layout_gravity="end"/>
    </LinearLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/head_8_topic_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_1"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/img_head_8_topic_1"
                android:layout_width="match_parent"
                android:paddingTop="8dp"
                android:layout_height="300dp"
                android:visibility="gone"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/head_8_topic_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_2"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/img_head_8_topic_2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/head_8_topic_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_3"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/img_head_8_topic_3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/head_8_topic_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_4"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/img_head_8_topic_4"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/head_8_topic_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_5"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/img_head_8_topic_5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/head_8_topic_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_6"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/img_head_8_topic_6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>


            <TextView
                android:id="@+id/head_8_topic_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_7"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>


            <TextView
                android:id="@+id/head_8_topic_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_8"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/img_head_8_topic_8"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>


            <TextView
                android:id="@+id/head_8_topic_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_9"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <LinearLayout
                android:id="@+id/img_head_8_topic_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/header_round_small_black"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/help_center_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center_1"
                    android:textColor="@color/white"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/help_center_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center_2"
                    android:textColor="@color/white"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/help_center_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center_3"
                    android:textColor="@color/white"/>
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/help_center_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center_4"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/head_8_topic_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_8_topic_10"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/img_head_8_topic_10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="gone"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_round_black"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/head_9"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:text="@string/head_9_en"
                    android:textColor="@color/white"/>
        </LinearLayout>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_1"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_2"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_3"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_4"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_5"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_6"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_9_topic_7"
                android:textColor="@color/white"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="56dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>




</LinearLayout>